# shopify-price-fixer

./: .gitignore  Cargo.toml  Cargo.toml.old  README.md  TabOutput.tsv  export-abc-bill.ahk  flake.nix  get-prices-by-sku.ahk  lib.ahk  run.sh  shell.nix  sku_extractor.py
.github/workflows/: build-release.yml
abc-price-extractor/: Cargo.toml
abc-price-extractor/src/: cli.rs  main.rs  parser.rs
scripts/: link_manf_codes.py  switch_sku_by_manf_codes.py  switch_sku_by_upc.py
shopify-updater/: Cargo.toml
shopify-updater/src/: lib.rs  main.rs
src/: lib.rs  main.rs  models.rs  product.rs  upc.rs
