[package]
name = "shopify-price-fixer"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["now"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version="1.0", features = ["derive"] }
csv = "1.3.0"
