[package]
name = "abc-price-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abc-uiautomation = { git = "https://github.com/areif-dev/abc-uiautomation.git", branch = "dev", commit = "b285a3b" }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
directories = "5.0"
